# pythonclientsearchtool

./: README.md  main.py  pyproject.toml  retrieveportaldatawidget.py  ui_retrieveportaldatawidget.py
qt/: retrieveportaldatawidget.ui
src/: main.py  retrieveportaldatawidget.py  ui_retrieveportaldatawidget.py
